wp-content/themes/make-co/scss/bp-member-directory.scss
.buddypress.directory {
	#members-list {
		.item-entry {
			.profile-field {
				margin-bottom: 3px;
				font-size: 14px;
			}
		}
	}
	#yz-members-directory {
		flex-direction: column;
		display: flex;
		#members-dir-list {
			width: calc( 80% );
			float: left;
			min-height: 1350px;
		}
		#yz-members-list {
			.yzm-user-cover {
				height: 100px;
			}
			.yzm-user-data {
				min-height: 325px;
				display: flex;
				flex-direction: column;
				.item {
					margin-bottom: auto;
				}
			}
		}
		.yzm-user-statistics {
			.yz-data-item {
				&:nth-child(1) {
					display: none;
					span { background-color: #3fafed; }
				}
				&:nth-child(2) span { background-color: #f51400; }
				&:nth-child(3) span { background-color: #005e9a; }
				&:nth-child(4) span { background-color: #2C4956; }
			}
		}
		.yz-card-show-avatar-border .yz-item-avatar {
			margin-bottom: 5px;
		}
		.yzm-user-data {
			.yzm-user-actions {
				display: flex;
				justify-content: center;
				padding: 15px 0px;
				margin-top: 15px;
				a { 
					min-width: 135px;
					@media screen and (min-width: 470px) and (max-width: 600px){
						min-width: 70px;
						max-width: 70px;
						visibility: hidden;
						&::before {
							padding: 0px 25px;
							visibility: visible;
							background: #3fafed;
						}
						&.yz-send-message::before {
							background: #f6f6f6;
						}
					}
					@media screen and (min-width: 1010px) and (max-width: 1120px){
						min-width: 70px;
						max-width: 70px;
						visibility: hidden;
						&::before {
							padding: 0px 25px;
							visibility: visible;
							background: #3fafed;
						}
						&.yz-send-message::before {
							background: #f6f6f6;
						}
					}
				}
			}
			.item-meta .activity { display: none; }
		}
		.bps_filters {
			position: absolute;
			top: 115px;
			right: 20px;
			br { display: none; }
			a { padding-left: 15px; }
		}
		.yz-directory-filter {
			.item-list-tabs {
				li#groups-all {
					a::before {
						content: "\f0c0";
						background: #3fafed;
					}
				}
				li#members-all {
					a::before {
						background: #f51400;
					}
				}
				li#members-personal {
					display: none;
				}
				li a div {
					float: right;
					font-size: 11px;
					min-width: 20px;
					margin-left: 10px;
					margin-top: 5px;
					padding: 2px 8px;
					line-height: 18px;
					text-align: center;
					display: inline-block;
					background-color: #eee;
					border-radius: 3px;
					-webkit-border-radius: 3px;
					-moz-border-radius: 3px;
					-ms-border-radius: 3px;
					-o-border-radius: 3px;
				}
			}
		}
		
		// styling for the filter sidebar
		.yz-sidebar-column {
			width: calc( 20% - 17.5px);
			margin-right: 17.5px;
			position: absolute;
			right: 0px;
			margin-top: 105px;
			.yz-column-content {
				padding-left: 17.5px;
				.widget-content {
					padding: 15px;
					.widget-title {
						font-size: 20px;
						font-weight: 500;
						padding: 0px;
						color: #333;
						border: 0px;
						@media screen and ( max-width: 1024px ) {
							cursor: pointer;
							&::after {
								font-family: "FontAwesome";
								content: "\f0c9";
								float: right;
							}
						}
					}
					form {
						margin-top: 8px;
						padding-top: 10px;
						border-top: solid 1px #999;
						@media screen and ( max-width: 1024px ) {
							display: none;
						}
						.nice-select { width: 100%; }
						label { 
							font-weight: 100;
							display: block;
							margin-bottom: -10px;
							margin-left: 18px;
							&.bps-label { 
								padding-bottom: 0px;
								margin-bottom: -5px;
								margin-left: 0px;
								font-weight: 700;
								span { display: none; }
							}
						}
						input[type="checkbox"] {
							margin-left: -18px;
						}
						.bps-checkbox {
							@media screen and ( max-width: 1024px ) and ( min-width: 580px ) {
								display: grid;
								grid-template-columns: repeat(4, 1fr);
								label { 
									margin-bottom: 10px;
									min-width: 250px;
								}
							}
						}
					}
				}
			}
		}
		@media screen and ( max-width: 1024px ) {
			#members-dir-list,
			.yz-sidebar-column {
				 width: initial;
				 float: none;
				 margin: 0; 
				 position: relative;
				 order: 1;
			}
			.yz-sidebar-column .yz-column-content {
				 padding: 0;
			}
			#members-directory-form {
				order: 2;
			}
		}
	}
}
#yz-groups-directory {
	#yz-groups-list {
		.action a {
			border-radius: 0px;
		}
	} 
	.yzg-user-statistics {
		.yz-data-posts span { background-color: #3fafed; }
		.yz-data-activity span { background-color: #f51400; }
		.yz-data-members span { background-color: #005e9a; }
	}
}
// Make everything in the pink scheme our color of blue
.my-friends.yz-red-scheme #friend-list .action a.accept, .yz-red-scheme #bbpress-forums #bbp-search-form #bbp_search_submit, .yz-red-scheme #bbpress-forums li.bbp-footer, .yz-red-scheme #bbpress-forums li.bbp-header, .yz-red-scheme #group-create-tabs li.current, .yz-red-scheme #group-settings-form input[type="submit"], .yz-red-scheme #message-recipients .highlight-icon i, .yz-red-scheme #search-members-form #members_search_submit, .yz-red-scheme #send-invite-form .submit input, .yz-red-scheme #send-reply #send_reply_button, .yz-red-scheme #send_message_form .submit #send, .yz-red-scheme #yz-directory-search-box form input[type="submit"], .yz-red-scheme #yz-group-body h1::before, .yz-red-scheme #yz-group-buttons .group-button a.join-group, .yz-red-scheme #yz-groups-list .action .group-button .accept-invite, .yz-red-scheme #yz-groups-list .action .group-button .join-group, .yz-red-scheme #yz-groups-list .action .group-button .membership-requested, .yz-red-scheme #yz-groups-list .action .group-button .request-membership, .yz-red-scheme #yz-members-list .yzm-user-actions .friendship-button .requested, .yz-red-scheme #yz-members-list .yzm-user-actions .friendship-button a, .yz-red-scheme .bbp-pagination .page-numbers.current, .yz-red-scheme .button.accept, .yz-red-scheme .group-button.accept-invite, .yz-red-scheme .group-button.join-group, .yz-red-scheme .group-button.request-membership, .yz-red-scheme .group-request-list .action .accept a, .yz-red-scheme .item-list-tabs #search-message-form #messages_search_submit, .yz-red-scheme .messages-notices .thread-options .read span, .yz-red-scheme .messages-options-nav #messages-bulk-manage, .yz-red-scheme .notifications .notification-actions .mark-read span, .yz-red-scheme .notifications-options-nav #notification-bulk-manage, .yz-red-scheme .pagination .page-numbers.current, .yz-red-scheme .sitewide-notices .thread-options .activate-notice, .yz-red-scheme .widget_display_forums li a::before, .yz-red-scheme .widget_display_search #bbp_search_submit, .yz-red-scheme .widget_display_topics li::before, .yz-red-scheme .widget_display_views li .bbp-view-title::before, .yz-red-scheme .youzer .checkout_coupon, .yz-red-scheme .youzer .wc-proceed-to-checkout a.checkout-button, .yz-red-scheme .youzer .wc-proceed-to-checkout a.checkout-button:hover, .yz-red-scheme .youzer .woocommerce-customer-details h2, .yz-red-scheme .youzer .yzwc-box-title h3, .yz-red-scheme .youzer .yzwc-main-content #payment #place_order, .yz-red-scheme .youzer .yzwc-main-content .track_order .form-row button, .yz-red-scheme .youzer .yzwc-main-content .woocommerce-checkout-review-order table.shop_table tfoot .order-total, .yz-red-scheme .youzer .yzwc-main-content .woocommerce-checkout-review-order table.shop_table thead, .yz-red-scheme .youzer .yzwc-main-content button[type="submit"], .yz-red-scheme .youzer .yzwc-main-content h3, .yz-red-scheme .youzer .yzwc-main-content table.shop_table td a.view::before, .yz-red-scheme .youzer .yzwc-main-content table.shop_table td a.woocommerce-MyAccount-downloads-file::before, .yz-red-scheme .youzer .yzwc-main-content table.shop_table td.actions .coupon button, .yz-red-scheme .youzer .yzwc-main-content table.shop_table td.woocommerce-orders-table__cell-order-number a, .yz-red-scheme .youzer .yzwc-main-content table.shop_table thead, .yz-red-scheme .youzer table tfoot tr, .yz-red-scheme .youzer table thead tr, .yz-red-scheme .youzer table.shop_table.order_details tfoot tr:last-child, .yz-red-scheme .yz-community-hashtags .yz-hashtag-item:hover, .yz-red-scheme .yz-forums-forum-item .yz-forums-forum-icon i, .yz-red-scheme .yz-forums-topic-item .yz-forums-topic-icon i, .yz-red-scheme .yz-group-manage-members-search #members_search_submit, .yz-red-scheme .yz-group-settings-tab input[type="submit"], .yz-red-scheme .yz-items-list-widget .yz-list-item .yz-item-action .yz-add-button i, .yz-red-scheme .yz-loading .youzer_msg, .yz-red-scheme .yz-media-filter .yz-filter-item .yz-current-filter, .yz-red-scheme .yz-nav-effect .yz-menu-border, .yz-red-scheme .yz-pagination .page-numbers.current, .yz-red-scheme .yz-post .yz-read-more, .yz-red-scheme .yz-post-content .yz-post-type, .yz-red-scheme .yz-product-actions .yz-addtocart, .yz-red-scheme .yz-project-content .yz-project-type, .yz-red-scheme .yz-scrolltotop i:hover, .yz-red-scheme .yz-service-icon i:hover, .yz-red-scheme .yz-social-buttons .friendship-button a, .yz-red-scheme .yz-social-buttons .friendship-button a.requested, .yz-red-scheme .yz-tab-post .yz-read-more, .yz-red-scheme .yz-tab-title-box, .yz-red-scheme .yz-view-order .yzwc-main-content > p mark.order-status, .yz-red-scheme .yz-wall-actions .yz-wall-post, .yz-red-scheme .yz-wall-embed .yz-embed-action .friendship-button a, .yz-red-scheme .yz-wall-embed .yz-embed-action .friendship-button a.requested, .yz-red-scheme .yz-wall-embed .yz-embed-action .group-button a, .yz-red-scheme .yz-wall-new-post .yz-post-more-button, .yz-red-scheme .yz-widget .yz-user-tags .yz-utag-values .yz-utag-value-item, .yz-red-scheme .yzb-author .yzb-account-settings, .yz-red-scheme .yzb-author .yzb-login, .yz-red-scheme .yzm-user-actions .friendship-button a, .yz-red-scheme .yzm-user-actions .friendship-button a.requested, .yz-red-scheme .yzw-file-post, .yz-red-scheme div.bbp-submit-wrapper button {
    //background: #f51400;
	 background: #3fafed;
    color: #fff;
}

